Task 3 and Task 4 done!

--- a/Task1/package.json
+++ b/Task1/package.json
@@ -4,7 +4,7 @@
   "description": "Task 1",
   "main": "hi.js",
   "scripts": {
-    "dev": "hi.js"
+    "dev": "node hi.js"
   },
   "author": "Prodaus Vasilii",
   "license": "ISC"
