--- a/Task2/package.json
+++ b/Task2/package.json
@@ -4,7 +4,7 @@
   "description": "Task 2",
   "main": "hi.js",
   "scripts": {
-    "dev": "webpack --mode development & node app.bundle.js",
+    "dev": "webpack --mode development & node dist/app.bundle.js",
     "watch": "webpack --watch --mode development"
   },
   "author": "Prodaus Vasilii",
